--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,5 @@
   <title>Not Real Mechanics AutoBlog</title>
 </head>
 <body>
-  <nav>
-    <a href="/flights/new">Add Money Pits</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="/flights">All Money Pits</a>
-  </nav>
+ <nav><a href="/">Money Pits</a></nav>
+</body>
