--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
-<%- include('../partials/header') %>
+<%- include('./partials/header') %>
 
 <h1>Not Real Mechanics AutoBlog</h1>
 
-<%- include('../partials/footer') %>
+<%- include('./partials/footer') %>
