--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,4 +2,5 @@
 
 <h1>Not Real Mechanics AutoBlog</h1>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/UZfVUtqEAEg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <%- include('./partials/footer') %>
