--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,12 +9,12 @@
 </head>
 <body>
   <nav>
-    <a href="/">Home Page</a>
+    <a href="/">Home</a>&nbsp;|&nbsp;<a href="/">Money Pits</a>
     <% if (user) { %>
-      <a href="/logout">LOG OUT</a>
+      <a href="/logout" class="login">Log Out?</a>
     <% } else { %>
-      <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+      <a href="/auth/google" class="login">Log In!&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
     <% } %>
-  </nav>
-</body>
-</html>
+    </nav>
+
+    <main>
