--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
   <nav>
-    <a href="/">Home</a>&nbsp;|&nbsp;<a href="/">Money Pits</a>
+    <a href="/">Home</a>&nbsp;|&nbsp;<a href="/">Money Pits</a>&nbsp;|&nbsp;<a href="/">Add Money Pit</a>
     <% if (user) { %>
       <a href="/logout" class="login">Log Out?</a>
     <% } else { %>
