New pit function rendering

--- a/views/autoblog/index.ejs
+++ b/views/autoblog/index.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-<h2>Find Your Style</h2>
+<h2>New Pit</h2>
 <form action="/autoblog" method="POST">
     <label>Make:
         <select name="make">
@@ -37,6 +37,5 @@
     </label><br>
     <input type="submit" value="Submit">
 </form>
-
 
 <%- include('../partials/footer') %>
