--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,9 +13,9 @@
     <% if (user) { %>
       |&nbsp;<a href="/autoblog/new">New Pit</a>&nbsp;|&nbsp;
       <a href="/autoblog">Money Pits</a>
-      <a href="/logout" class="login">Log Out?</a>
+      <a href="/logout" class="login">Log Out</a>
     <% } else { %>
-      <a href="/auth/google" class="login">Log In!&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+      <a href="/auth/google" class="login">Log In&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
     <% } %>
     </nav>
 
