comment schema in models

--- a/views/autoblog/index.ejs
+++ b/views/autoblog/index.ejs
@@ -15,7 +15,7 @@
                     <td><%= a.make %></td>
                     <td><%= a.model %></td>
                     <td><%= a.engine %></td>
-                        <td><%= f.Beefy ? 'Yes' : 'No' %></td>
+                        <td><%= a.Beefy ? 'Yes' : 'No' %></td>
                     <td><a href="/autoblog/<%= a._id %>">DETAILS</a></td>
                 </tr>
 
