--- a/views/autoblogs/new.ejs
+++ b/views/autoblogs/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 
 <h2>New Pit</h2>
-<form action="/autoblog" method="POST">
+<form action="/autoblogs" method="POST">
     <label>Make:
         <select name="make">
             <option value="Subaru">Subaru</option>
