--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,8 +11,8 @@
   <nav>
     <a href="/">Home</a>&nbsp;
     <% if (user) { %>
-      |&nbsp;<a href="/autoblog/new">New Pit</a>&nbsp;|&nbsp;
-      <a href="/autoblog">Money Pits</a>
+      |&nbsp;<a href="/autoblogs/new">New Pit</a>&nbsp;|&nbsp;
+      <a href="/autoblogs">Money Pits</a>
       <a href="/logout" class="login">Log Out</a>
     <% } else { %>
       <a href="/auth/google" class="login">Log In&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
