Links/comments/deletes rendering

--- a/views/autoblogs/new.ejs
+++ b/views/autoblogs/new.ejs
@@ -1,8 +1,8 @@
 <%- include('../partials/header') %>
 
-<h2>New Pit</h2>
+<h2>Find Your Money Pit</h2>
 <form action="/autoblogs" method="POST">
-    <label>Make:
+   <br><label>Make:
         <select name="make">
             <option value="Subaru">Subaru</option>
             <option value="Audi">Audi</option>
@@ -12,7 +12,7 @@
             <option value="Toyota">Toyota</option>
         </select>
     </label><br>
-    <label>Model:
+   <br> <label>Model:
         <select name="model">
             <option value="Bugeye WRX">Bugeye WRX</option>
             <option value="Blobeye WRX">Blobeye WRX</option>
@@ -24,7 +24,7 @@
             <option value="Supra MK4">Supra MK4</option>
         </select>
     </label><br>
-    <label>Engine:
+    <br><label>Engine:
         <select name="engine">
             <option value="EJ205">EJ205</option>
             <option value="EJ257">EJ257</option>
@@ -35,7 +35,7 @@
             <option value="2JZGTE">2JZGTE</option>
         </select>
     </label><br>
-    <input type="submit" value="Submit">
+    <br><input type="submit" value="LETS GO">
 </form>
 
 <%- include('../partials/footer') %>
