--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
   <nav>
     <a href="/">Home</a>&nbsp;
     <% if (user) { %>
-      |&nbsp;<a href="/autoblogs/new">New Pit</a>&nbsp;|&nbsp;
+      |&nbsp;<a href="/autoblogs/new">Find Your Ride</a>&nbsp;|&nbsp;
       <a href="/autoblogs">Money Pits</a>
       <a href="/logout" class="login">Log Out</a>
     <% } else { %>
