--- a/views/autoblogs/new.ejs
+++ b/views/autoblogs/new.ejs
@@ -21,7 +21,7 @@
             <option value="Silverado">Silverado</option>
             <option value="S2000">S2000</option>
             <option value="GTR">GTR</option>
-            <option value="Supra MK4">Supra MK4</option>
+            <option value="Supra">Supra</option>
         </select>
     </label><br>
     <br><label>Engine:
