--- a/views/autoblogs/show.ejs
+++ b/views/autoblogs/show.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-<section id="show-page">
+<br><section id="show-page">
   <div>Make: </div>
   <div><%= autoblog.make %></div>
   <div>Model: </div>
@@ -36,7 +36,6 @@
         <th>Date</th>
         <th>Comment</th>
         <th>Rating</th>
-        <th></th>
       </tr>
     </thead>
     <tbody>
