edit button placement

--- a/views/autoblogs/show.ejs
+++ b/views/autoblogs/show.ejs
@@ -50,7 +50,10 @@
           <td>
             <% if ( user?._id.equals(c.user) ) { %>
               <form action="/comments/<%= c._id %>?_method=DELETE" method="POST">
-                <button type="submit">X</button>
+                <button type="submit">X</button> 
+              </form>
+              <form action="/comments/edit/<%= c._id %>?_method=EDIT" method="PUT">
+                <button type="submit">Edit</button>
               </form>
             <% } %>
           </td>
