--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
     <a href="/">Home</a>&nbsp;
     <% if (user) { %>
       |&nbsp;<a href="/autoblogs/new">Find Your Ride</a>&nbsp;|&nbsp;
-      <a href="/autoblogs">Money Pits</a>
+      <a href="/autoblogs">Money Pits</a>&nbsp;
       <a href="/logout" class="login">Log Out</a>
     <% } else { %>
       <a href="/auth/google" class="login">Log In&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
