--- a/views/autoblogs/new.ejs
+++ b/views/autoblogs/new.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-<h2>Find Your Money Pit</h2>
+<h2>Select Your Ride</h2>
 <form action="/autoblogs" method="POST">
    <br><label>Make:
         <select name="make">
