update almost rendering

--- a/views/autoblogs/show.ejs
+++ b/views/autoblogs/show.ejs
@@ -54,7 +54,7 @@
               </form>
               <% } %>
               <% if ( user?._id.equals(c.user) ) { %>
-              <a href="/autoblogs/<%= c._id %>/comments/edit">
+              <a href="/comments/<%= c._id %>/edit">
                 <button type="submit">Edit</button>
               </a>
               <% } %>
