--- a/views/autoblogs/edit.ejs
+++ b/views/autoblogs/edit.ejs
@@ -3,19 +3,19 @@
 <h2>Edit Comment</h2>
 
 <% if (user) { %>
-    <form id="add-comment-form" method="POST"
-      action="/autoblogs/<%= autoblog._id %>/comments/<%= comment %>?_method=PUT">
+    <form id="add-comment-form" method="POST" 
+     action="/autoblogs/<%= autoblog._id %>/comments/<%= comment._id %>?_method=PUT">
       <label>Comment:</label>
-      <textarea name="content"></textarea>
+      <textarea name="content"><%= comment.content %></textarea>
       <label>Sauce Level:</label>
-      <select name="Sauce Level">
+      <select name="Sauce Level" value="<%= comment.rating %>">
         <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
         <option value="5" selected>5</option>
       </select>
-      <input type="submit" value="Add Sauce">
+      <input type="submit" value="Edit The Sauce">
     </form>
   <% } %>
 
