--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -4,7 +4,7 @@
 
 <% if (user) { %>
     <form id="add-comment-form" method="POST" 
-     action="/autoblogs/<%= autoblog._id %>/comments/<%= comment._id %>?_method=PUT">
+     action="/comments/<%= comment._id %>?_method=PUT">
       <label>Comment:</label>
       <textarea name="content"><%= comment.content %></textarea>
       <label>Sauce Level:</label>
