working on ratings

--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-<h2>Edit Comment</h2>
+<h2>Edit Comment/Sauce Level</h2>
 
 <% if (user) { %>
     <form id="add-comment-form" method="POST" 
@@ -13,7 +13,7 @@
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
-        <option value="5" selected>5</option>
+        <option value="5">5</option>
       </select>
       <input type="submit" value="Edit The Sauce">
     </form>
