--- a/views/autoblogs/show.ejs
+++ b/views/autoblogs/show.ejs
@@ -22,7 +22,7 @@
       <option value="2">2</option>
       <option value="3">3</option>
       <option value="4">4</option>
-      <option value="5" selected>5</option>
+      <option value="5">5</option>
     </select>
     <input type="submit" value="Add Sauce">
   </form>
