--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,15 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: rgb(212, 209, 216);
+  background-color: rgb(218, 216, 220);
+}
+
+body > nav {
+  grid-area: nav;
+  background-color: rgb(233, 200, 166);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0 20px 0 30px;
 }
 
 h1 {
@@ -11,13 +19,35 @@ h1 {
 }
 
 iframe {
-  margin-top: 15vh;
-  margin-left: 50vh;
+  display: block;
+  margin: auto;
+  margin-top: 100px;
+}
+
+h4 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: oblique;
+}
+
+.versus {
+  background-image: url('https://imgur.com/xbN5SaC.jpg');
+  background-size: cover;
+  height:900px;
+  background-position: center;
 }
 
 a {
+  margin: 15px;
   color: black;
+  padding: 6px;
+  border-radius: 3px;
 }
+
+a:hover:not(.active) {
+  color: white;
+  background-color: #08748a;
+}
+
 
 .login {
   display: flex;
