--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,11 @@
 <%- include('./partials/header') %>
-
+<form class="versus">
 <h1>Not Real Mechanics AutoBlog</h1>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/UZfVUtqEAEg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h4>Welcome to the Not Real Mechanics LLC autoblog page! A simple page for the everday car/truck enthusiast. Here you'll be able to pick from a variety of vehicles (mostly JDM) and choose your model and engine!
+    Whether it's 180 horsepower or 1800, it doesn't matter. We all do it for the same reason, to express ourselves and go fast.
+</h4>
+
+<iframe width="560" height="370" src="https://www.youtube.com/embed/UZfVUtqEAEg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</form>
 <%- include('./partials/footer') %>
