rendering pages with css

--- a/views/autoblogs/index.ejs
+++ b/views/autoblogs/index.ejs
@@ -21,5 +21,24 @@
             <% }); %>
         </tbody>
     </table>
+<div class="row">
+    <div class="column">
+        <img src="https://imgur.com/ru13iNG.jpg">
+        <img src="https://imgur.com/GqOT99m.jpg">
+        <img src="https://imgur.com/mjVNQNR.jpg">
+        <img src="https://imgur.com/02i40iq.jpg">
+        <img src="https://imgur.com/dw95BBA.jpg">
+        <img src="https://imgur.com/eqR7gjL.jpg">
+        <img src="https://imgur.com/ekwAH8Z.jpg">
+    </div>
+    <div class="column">
+        <img src="https://imgur.com/klPs3Qe.jpg">
+        <img src="https://imgur.com/F7HZppr.jpg">
+        <img src="https://imgur.com/4N8fzZs.jpg">
+        <img src="https://imgur.com/xjxKcZl.jpg">
+        <img src="https://imgur.com/XSKPMnS.jpg">
+        <img src="https://imgur.com/Cd5lrkd.jpg">
+        <img src="https://imgur.com/BJWUODx.jpg">
+    </div>
 
 <%- include('../partials/footer') %>
