--- a/views/autoblogs/new.ejs
+++ b/views/autoblogs/new.ejs
@@ -38,4 +38,25 @@
     <br><input type="submit" value="LETS GO">
 </form>
 
+<div class="row">
+    <div class="column">
+      <img src="https://imgur.com/hqYp7RM.jpg">Brembo Calipers
+      <img src="https://imgur.com/wtw9f2W.jpg">Honda Cluster
+      <img src="https://imgur.com/pOF1ylK.jpg">Killer B Oil Pickup
+      <img src="https://imgur.com/vizV1n4.jpg">Killer B Holy Headers
+      <img src="https://imgur.com/ulHjnGR.jpg">MX-5 Coilover Adjustment
+      <img src="https://imgur.com/cmTtcet.jpg"> Gold Prodrives
+      <img src="https://imgur.com/d4RvqlJ.jpg">Garage Nights ft. CV Axle
+    </div>
+    <div class="column">
+        <img src="https://imgur.com/Qvh3qpL.jpg">TGR Supra @ SEMA LV 2019
+        <img src="https://imgur.com/Lag3YAh.jpg">EVO V @ SEMA LV 2019
+        <img src="https://imgur.com/oYd1zQM.jpg">S-Turn Local Drift Spot, LV
+        <img src="https://imgur.com/xlLyLq8.jpg">Hawkeye @ Mt. Charleston
+        <img src="https://imgur.com/GWWGU9u.jpg">Jesus' Rear Suspension Setup
+        <img src="https://imgur.com/4NRDtbP.jpg">Silvia at LV Speedway
+        <img src="https://imgur.com/4CeShez.jpg">TJ Hunt Drift Event, LV
+      </div>
+
+
 <%- include('../partials/footer') %>
