--- a/views/autoblogs/show.ejs
+++ b/views/autoblogs/show.ejs
@@ -1,5 +1,11 @@
 <%- include('../partials/header') %>
 
+<style class="show">
+  body {
+    background-image: url('https://imgur.com/OaTYxJ5.jpg.jpg');
+  }
+  </style>
+
 <br><section id="show-page">
   <div>Make: </div>
   <div><%= autoblog.make %></div>
