--- a/views/autoblogs/show.ejs
+++ b/views/autoblogs/show.ejs
@@ -23,7 +23,7 @@
     <label>Comment:</label>
     <textarea name="content"></textarea>
     <label>Sauce Level:</label>
-    <select name="Sauce Level">
+    <select name="rating">
       <option value="1">1</option>
       <option value="2">2</option>
       <option value="3">3</option>
