--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/header') %>
-<form class="versus">
+<form class="home">
 <h1>Not Real Mechanics AutoBlog</h1>
 
 <h4>Welcome to the Not Real Mechanics LLC autoblog page! A simple page for the everday car/truck enthusiast. Here you'll be able to pick from a variety of vehicles (mostly JDM) and choose your model and engine!
