--- a/views/autoblogs/show.ejs
+++ b/views/autoblogs/show.ejs
@@ -1,11 +1,6 @@
 <%- include('../partials/header') %>
 
-<style class="show">
-  body {
-    background-image: url('https://imgur.com/OaTYxJ5.jpg.jpg');
-  }
-  </style>
-
+<section id="main-section">
 <br><section id="show-page">
   <div>Make: </div>
   <div><%= autoblog.make %></div>
@@ -76,5 +71,5 @@
 <% } else { %>
   <h5>No Comments Yet</h5>
 <% } %>
-  
+
 <%- include('../partials/footer') %>
