--- a/views/autoblogs/new.ejs
+++ b/views/autoblogs/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 
-<h2>Select Your Ride</h2>
-<form action="/autoblogs" method="POST">
+<h1 class="select">Select Your Ride</h1>
+<form class="selectride" action="/autoblogs" method="POST">
    <br><label>Make:
         <select name="make">
             <option value="Subaru">Subaru</option>
@@ -38,15 +38,17 @@
     <br><input type="submit" value="LETS GO">
 </form>
 
+<h2 class="new">Gallery</h2>
 <div class="row">
     <div class="column">
       <img src="https://imgur.com/hqYp7RM.jpg">Brembo Calipers
       <img src="https://imgur.com/wtw9f2W.jpg">Honda Cluster
       <img src="https://imgur.com/pOF1ylK.jpg">Killer B Oil Pickup
       <img src="https://imgur.com/vizV1n4.jpg">Killer B Holy Headers
-      <img src="https://imgur.com/ulHjnGR.jpg">MX-5 Coilover Adjustment
+      <img src="https://imgur.com/ulHjnGR.jpg">MX-5 Tein Install
       <img src="https://imgur.com/cmTtcet.jpg"> Gold Prodrives
       <img src="https://imgur.com/d4RvqlJ.jpg">Garage Nights ft. CV Axle
+      <img src="https://imgur.com/wKjk208.jpg">R34 Skyline
     </div>
     <div class="column">
         <img src="https://imgur.com/Qvh3qpL.jpg">TGR Supra @ SEMA LV 2019
