--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,6 @@
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: rgb(218, 216, 220);
-  background: url()
+  background-color: rgb(122, 162, 202);
 }
 
 body > nav {
@@ -17,6 +16,7 @@ h1 {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   text-align: center;
   font-size: 7vh;
+  text-decoration: underline;
 }
 
 iframe {
@@ -25,9 +25,12 @@ iframe {
   margin-top: 100px;
 }
 
-h4 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-style: oblique;
+.home > h4 {
+  text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: black;
+  border: 3px solid rebeccapurple;
+  padding: 5px;
 }
 
 .home {
@@ -36,12 +39,13 @@ h4 {
   height:900px;
   background-position: center;
 }
-/*************  ***********/
 a {
+  font-family: serif;
   margin: 15px;
   color: black;
   padding: 6px;
-  border-radius: 3px;
+  border-radius: 5px;
+  font-size: 20px;
 }
 
 a:hover:not(.active) {
@@ -79,18 +83,60 @@ nav {
   height: 45px;
 }
 
+/************* new ejs *************/
+
+.select {
+  text-align: center;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.selectride {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(auto, 22rem));
+  grid-gap: 10px;
+  justify-content: center;
+  margin-bottom: 2.5rem;
+  font-family: monospace;
+  font-weight: bolder;
+  background-image: url('https://imgur.com/xHu9HQ3.gif');
+  background-position: left;
+  background-repeat: no-repeat;
+  color: white;
+  text-shadow: 2px 2px 4px #000000;
+  font-size: large;
+}
+
+.selectride * {
+  font-size: 15px;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.selectride input[type="submit"]  {
+  grid-column: span 2;
+  width: 10rem;
+  margin-left: 370px;
+}
+
+.new {
+  text-align: center;
+  border: 2px solid black;
+}
+
+/********** new/index ejs **********/
 
 .row {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 4px;
+  padding: 0 3px;
+  background-color: rgb(122, 162, 202);
 }
 
 .column {
   flex: 50%;
   border: 1px solid #ddd;
   border-radius: 4px;
-  padding: 5px;
+  padding: 2px;
   width: 150px;
 }
 
@@ -99,33 +145,80 @@ nav {
   vertical-align: middle;
   border: 1px solid #ddd;
   border-radius: 4px;
-  padding: 5px;
+  padding: 2px;
   width: 150px;
 }
 
-/* main::before {
-  content: "";
-  background-image: url('https://imgur.com/OaTYxJ5.jpg.jpg.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: absolute;
-  opacity: 0.25;
-  height: 100%;
-  width: 100%;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  z-index: 0;
-} */
+/********** index ejs **********/
 
-#main-section {
-  z-index: 5;
+table {
+  font-size: 14px;
+  margin: auto;
+  background-color: rgb(233, 200, 166);
+  opacity: 0.9;
 }
+
+table thead th {
+  padding: 5px;
+  border-bottom: 2px solid #424748;
+}
+
+table td {
+  padding: 10px;
+  text-align: center;
+}
+
+#list td:nth-child(2), #list td:nth-child(3){
+  min-width: 100px;
+}
+
+#list a {
+  border-radius: 4px;
+  background-color: dodgerblue;
+  padding: 4px;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+#list a:hover {
+  color: white;
+}
+
+/********** show ejs **********/
 
 #show-page {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(auto, 22rem));
+  grid-gap: 10px;
+  justify-content: center;
+  margin-bottom: 2.5rem;
+  font-family: monospace;
+  font-weight: bolder;
+  font-size: x-large;
+  color: rgb(233, 200, 166);
+  text-shadow: 2px 2px 4px black;
   margin: auto;
   width: 30%;
-  border: 3px solid rebeccapurple;
+  border: 3px solid black;
   padding: 10px;
+  background-image: url('https://imgur.com/OaTYxJ5.jpg');
+  background-size: 500px;
+  background-position: center;
 }
+
+#add-comment-form {
+  display: flex;
+  justify-content: center;
+}
+
+#add-comment-form label {
+  font-size: larger;
+  color: rgb(233, 200, 166);
+  text-shadow: 2px 2px 4px black;
+}
+
+#add-comment-form input[type="submit"]  {
+  width: 10rem;
+}
+
+ 
